--- a/components/canvas.html
+++ b/components/canvas.html
@@ -67,7 +67,7 @@
                         <md-button aria-label="{{lang.drawZone}}"
                                    class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                    ng-click="canvasCtrl.speedDialClicked('draw_zone')">
-                            <img src="img/icons/draw-zone.png" class="width-100 height-100"
+                            <img src="img/icons/draw_zone.png" class="width-100 height-100"
                                  alt="{{lang.drawZone}}" title="{{lang.drawZone}}">
                         </md-button>
                     </div>
@@ -75,7 +75,7 @@
                         <md-button aria-label="{{lang.deleteZone}}"
                                    class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                    ng-click="canvasCtrl.speedDialClicked('delete_zone')">
-                            <img src="img/icons/draw-zone.png" class="width-100 height-100"
+                            <img src="img/icons/delete_zone.png" class="width-100 height-100"
                                  alt="{{lang.deleteZone}}" title="{{lang.deleteZone}}">
                         </md-button>
                     </div>
@@ -83,7 +83,7 @@
                         <md-button aria-label="{{lang.modifyZone}}"
                                    class="md-fab md-raised md-mini background-ottanio border-3-darkblue"
                                    ng-click="canvasCtrl.speedDialClicked('modify_zone')">
-                            <img src="img/icons/draw-zone.png" class="width-100 height-100"
+                            <img src="img/icons/modify_zone.png" class="width-100 height-100"
                                  alt="{{lang.modifyZone}}" title="{{lang.modifyZone}}">
                         </md-button>
                     </div>
@@ -161,7 +161,7 @@
                                 <md-list-item ng-click="zone()"><p>{{lang.zoneTable | uppercase}}</p><img
                                         src="img/icons/menu/floor-icon.png" class="menu-list-icon"
                                         alt=""></md-list-item>
-                                <md-list-item ng-click="viewHistory()"><p>{{lang.history | uppercase}}</p><img
+                                <md-list-item ng-click="viewHistory('canvas')"><p>{{lang.history | uppercase}}</p><img
                                         src="img/icons/menu/history_icon_16.png" class="menu-list-icon"
                                         alt=""></md-list-item>
                                 <md-list-item ng-click="quickActions()"><p>{{lang.quickActions | uppercase}}</p><img
@@ -242,13 +242,15 @@
                                      layout-align="center center">
 
                                     <div flex="100" layout layout-align="center center">
-                                        <md-subheader class="padding-0">Fullscreen: <b class="color-red">OFF</b>
+                                        <md-subheader class="padding-0" ng-show="canvasCtrl.switch.showFullscreen">Fullscreen:
+                                            <b class="color-green">ON</b></md-subheader>
+                                        <md-subheader class="padding-0"ng-show="!canvasCtrl.switch.showFullscreen">Fullscreen:
+                                            <b class="color-red">OFF</b>
                                         </md-subheader>
                                     </div>
 
-                                    <md-switch class="md-primary margin-none margin-top-10-px" ng-change="switchChanged"
-                                               md-no-ink aria-label="{{lang.showHideFullscreen}}"
-                                               title="{{lang.showHideFullscreen}}"
+                                    <md-switch class="md-primary margin-none margin-top-10-px"
+                                               md-no-ink aria-label="{{lang.showHideFullscreen}}" title="{{lang.showHideFullscreen}}"
                                                ng-model="canvasCtrl.switch.showFullscreen">
                                     </md-switch>
                                 </div>
