--- a/components/home.html
+++ b/components/home.html
@@ -95,6 +95,19 @@
                                     </md-select>
                                 </md-input-container>
                             </div>
+                            <div id="zoom-location-container" layout="column" class="padding-10-px"
+                                 layout-align="center center">
+
+                                <md-input-container class="margin-bottom-0 margin-top-10">
+                                    <label>{{lang.searchLocation}}</label>
+                                    <md-select ng-model="selectedLocation" md-on-open="getAllLocations()">
+
+                                        <md-option ng-repeat="location in locations" ng-value="location">
+                                            {{location.name}}
+                                        </md-option>
+                                    </md-select>
+                                </md-input-container>
+                            </div>
                             <div layout="row" layout-align="center center" class="width-300-px">
 
                                 <!--<div id="sound-on-off-container" layout="column" class="padding-10-px width-50"-->
