PHASE 2 BUG FIX
Bug fix: Non cancella l'utente se ha almeno una lacation
Update: Cambiata l'icona degli allarmi dei tag nelle lacations della home
Update: Far vedere solo le location dell'utente nel search location
Update: Aggiungere ancore con la batteria scarica nella sezone ancore offline
Update: Anche le ancore offline devono scatenare l'alarme in una location nella schermata home
Update: Mettere il colore al posto della stringa per quanto riguarda il colore delle zone nella tabella zone
Bug fix: aggiunta la scritta nessun elemento trovato in alcune tabelle che non lo mostrava
Update: Far vedere il nome delle ancore come quello dei tag senza sfondo
Update: aggiungere lo stato dell'ancora nelle info ancora (online on/off, battery_status)
Update: sostituire l'id del tag con la tipologia nelle info tag
Update: mettere l'imagine della batteria nella finestra info tag
Update: inserire label allarmi attivi nella finestra info tag

--- a/components/anchor-info.html
+++ b/components/anchor-info.html
@@ -19,34 +19,45 @@
         </div>
     </md-toolbar>
     <!--end popup header-->
-
-    <!--popup content-->
-    <md-content class="popup-padding">
-        <div layout="column" layout-align="center center">
-            <md-list>
-                <md-list-item class="width-300-px">
-                    <p class="float-left margin-right-50-px">{{lang.ip}}:</p>
-                    <p class="float-right text-right">{{anchor.ip}}</p>
-                </md-list-item>
-                <md-list-item class="width-300-px">
-                    <p class="float-left">{{lang.buildingName}}:</p>
-                    <p class="float-right text-right">{{anchor.location_name}}</p>
-                </md-list-item>
-                <md-list-item class="width-300-px">
-                    <p class="float-left">{{lang.mac}}:</p>
-                    <p class="float-right text-right">{{anchor.mac}}</p>
-                </md-list-item>
-                <md-list-item class="width-300-px">
-                    <p class="float-left">{{lang.type}}:</p>
-                    <p class="float-right text-right">{{anchor.type}}</p>
-                </md-list-item>
-                <md-list-item class="width-300-px">
-                    <p class="float-left">{{lang.rssi}}:</p>
-                    <p class="float-right text-right">{{anchor.rssi}}</p>
-                </md-list-item>
-
-            </md-list>
-        </div>
-    </md-content>
-    <!--end popup content-->
 </div>
+
+<!--popup content-->
+<md-content class="popup-padding">
+    <div layout="column" layout-align="center center" ng-controller="languageController">
+        <md-list>
+            <md-list-item class="width-300-px">
+                <p class="float-left margin-right-50-px">{{lang.ip}}:</p>
+                <p class="float-right text-right">{{anchor.ip}}</p>
+            </md-list-item>
+            <md-list-item class="width-300-px">
+                <p class="float-left">{{lang.buildingName}}:</p>
+                <p class="float-right text-right">{{anchor.location_name}}</p>
+            </md-list-item>
+            <md-list-item class="width-300-px">
+                <p class="float-left">{{lang.mac}}:</p>
+                <p class="float-right text-right">{{anchor.mac}}</p>
+            </md-list-item>
+            <md-list-item class="width-300-px">
+                <p class="float-left">{{lang.type}}:</p>
+                <p class="float-right text-right">{{anchor.type}}</p>
+            </md-list-item>
+            <md-list-item class="width-300-px">
+                <p class="float-left">{{lang.rssi}}:</p>
+                <p class="float-right text-right">{{anchor.rssi}}</p>
+            </md-list-item>
+            <md-list-item class="width-300-px">
+                <p class="float-left">{{lang.anchorState}}:</p>
+                <p class="float-right text-right" ng-class="{'color-green': anchor.is_online, 'color-red': !anchor.is_online}">{{(anchor.is_online ? (lang.online | uppercase) : (lang.offline | uppercase))}}</p>
+            </md-list-item>
+
+            <md-list-item class="width-300-px">
+                <p class="float-left">{{lang.batteryStatus}}:</p>
+                <p class="float-right text-right"><img alt="{{lang.batteryStatus}}" title="{{lang.batteryStatus}}"
+                                                       aria-label="{{lang.batteryStatus}}"
+                                                       ng-src="{{anchor.battery_status ? 'img/icons/battery_empty_24.png' : 'img/icons/battery_full_24.png'}}"></p>
+            </md-list-item>
+
+        </md-list>
+    </div>
+</md-content>
+<!--end popup content-->
