--- a/css/custom.css
+++ b/css/custom.css
@@ -100,6 +100,10 @@ FONTS
     text-align: right;
 }
 
+.text-bold{
+    font-weight: bold;
+}
+
 .text-underlined{
     text-decoration: underline;
 }
