--- a/css/menu.css
+++ b/css/menu.css
@@ -75,6 +75,17 @@
 #outags-on-off-container md-switch.md-checked.md-primary .md-thumb{
     background-color: #0093c4;
 }
+#outdoor-tags-on-off-container .md-subheader-inner{
+    padding: 0!important;
+}
+
+#outdoor-tags-on-off-container md-switch.md-checked.md-primary .md-bar{
+    background-color: #4fc3f7;
+}
+
+#outdoor-tags-on-off-container md-switch.md-checked.md-primary .md-thumb{
+    background-color: #0093c4;
+}
 #zones-on-off-container .md-subheader-inner{
     padding: 0!important;
 }
