--- a/components/history-table.html
+++ b/components/history-table.html
@@ -65,6 +65,9 @@
                     </md-input-container>
                 </div>
             </div>
+            <div layout="row" class="width-100">
+                <md-button ng-click="deleteHistory()" class="md-raised background-red color-white margin-auto margin-top-20-px">{{lang.deleteHistory}}</md-button>
+            </div>
         </div>
         <div layout="column">
             <md-table-container>
