--- a/components/insert-anchor-row.html
+++ b/components/insert-anchor-row.html
@@ -67,13 +67,12 @@
             </div>
 
             <div layout="row">
-                <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0">
-                    <input required type="number" ng-model="insertAnchor.proximity" name="insertAnchorProximity"
-                           placeholder="{{lang.proximity}}">
-                    <div ng-messages="insertAnchorForm.insertAnchorProximity.$error || insertAnchorForm.$submitted"
-                         role="alert">
-                        <div ng-message=" required">{{lang.insertProximity}}</div>
-                    </div>
+                <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0 width-50">
+                    <label>{{lang.type}}</label>
+                    <md-select ng-model="insertAnchor.proximity">
+                        <md-option ng-value=1>SI</md-option>
+                        <md-option ng-value=0>NO</md-option>
+                    </md-select>
                 </md-input-container>
                 <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0">
                     <input required type="number" ng-model="insertAnchor.rssi" name="insertAnchorRssi"
