--- a/components/tags-info.html
+++ b/components/tags-info.html
@@ -14,45 +14,45 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class="font-iceberg font-x-large" ng-repeat="tag in tags">{{tag.name}}/</h1>
+                <h1 class="font-iceberg font-x-large">{{lang.wetagsGroup | uppercase}}</h1>
             </div>
         </div>
     </md-toolbar>
     <!--end popup header-->
-
-    <!--popup content-->
-    <md-content class="popup-padding">
-        <div layout="column" layout-align="center center">
-            <md-list>
-                <md-list-item ng-repeat="tag in tags">
-                    <md-list>
-                        <md-list-item class="width-300-px">
-                            <p class="float-left">{{lang.name}}:</p>
-                            <p class="float-right text-right">{{tag.name}}</p>
-                        </md-list-item>
-                        <md-list-item class="width-300-px">
-                            <p class="float-left">{{lang.floor}}:</p>
-                            <p class="float-right text-right">{{tag.floor_name}}</p>
-                        </md-list-item>
-                        <md-list-item class="width-300-px">
-                            <p class="float-left">{{lang.anchor}}:</p>
-                            <p class="float-right text-right">{{tag.anchor_name}}</p>
-                        </md-list-item>
-                    </md-list>
-                    <md-divider></md-divider>
-                </md-list-item>
-            </md-list>
-            <md-list>
-                <md-list-item class="md-3-line" ng-repeat="alarm in alarms" ng-click="null">
-                    <img ng-src="{{alarm.image}}" class="md-avatar" alt=""/>
-                    <div class="md-list-item-text" layout="column">
-                        <h3>{{ alarm.tag }}</h3>
-                        <h4>{{ alarm.name }}</h4>
-                        <p>{{ alarm.description }}</p>
-                    </div>
-                </md-list-item>
-            </md-list>
-        </div>
-    </md-content>
-    <!--end popup content-->
 </div>
+<!--popup content-->
+<md-content class="popup-padding">
+    <div layout="column" layout-align="center center" ng-controller="languageController">
+        <md-list>
+            <md-list-item ng-repeat="tag in tags">
+                <md-list>
+                    <md-list-item class="width-300-px">
+                        <p class="float-left">{{lang.name}}:</p>
+                        <p class="float-right text-right">{{tag.name}}</p>
+                    </md-list-item>
+                    <md-list-item class="width-300-px">
+                        <p class="float-left">{{lang.floor}}:</p>
+                        <p class="float-right text-right">{{tag.floor_name}}</p>
+                    </md-list-item>
+                    <md-list-item class="width-300-px">
+                        <p class="float-left">{{lang.anchor}}:</p>
+                        <p class="float-right text-right">{{tag.anchor_name}}</p>
+                    </md-list-item>
+                </md-list>
+                <md-divider></md-divider>
+            </md-list-item>
+        </md-list>
+        <md-list>
+            <p class="text-center color-red text-bold">{{lang.tagsAlarms | uppercase}}</p>
+            <md-list-item class="md-3-line" ng-repeat="alarm in alarms" ng-click="null">
+                <img ng-src="{{alarm.image}}" class="md-avatar" alt=""/>
+                <div class="md-list-item-text" layout="column">
+                    <h3>{{ alarm.tag }}</h3>
+                    <h4>{{ alarm.name }}</h4>
+                    <p>{{ alarm.description }}</p>
+                </div>
+            </md-list-item>
+        </md-list>
+    </div>
+</md-content>
+<!--end popup content-->
