SIMO REQUIREMENTS UPDATE
Implementata la gestione dei tag nelle zone vietate con il relativo allarme nella tabella degli allarmi. Non ancora testato.

--- a/components/insert-anchor-row.html
+++ b/components/insert-anchor-row.html
@@ -68,7 +68,7 @@
 
             <div layout="row">
                 <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0 width-50">
-                    <label>{{lang.type}}</label>
+                    <label>{{lang.proximity}}</label>
                     <md-select ng-model="insertAnchor.proximity">
                         <md-option ng-value=1>SI</md-option>
                         <md-option ng-value=0>NO</md-option>
