--- a/components/canvas.html
+++ b/components/canvas.html
@@ -8,6 +8,9 @@
             <img ng-show="canvasCtrl.showOfflineAnchorsIcon" ng-click="showOfflineAnchorsIndoor()"
                  src="img/icons/offline_anchors_alert_64.png" alt="{{lang.offlineAnchors}}"
                  title="{{lang.offlineAnchors}}">
+            <img ng-show="canvasCtrl.showEngineOffIcon"
+                 src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}"
+                 title="{{lang.engineOff}}">
         </div>
 
         <div class="bottom-corner">
