--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -9,6 +9,9 @@
         <img ng-show="outdoorCtrl.showOfflineAnchorsIcon" ng-click="outdoorCtrl.showOfflineAnchors()"
              src="img/icons/offline_anchors_alert_64.png" alt="{{lang.offlineAnchors}}"
              title="{{lang.offlineAnchors}}">
+        <img ng-show="outdoorCtrl.showEngineOffIcon"
+             src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}"
+             title="{{lang.engineOff}}">
     </div>
     <!--map container-->
     <div id="map-div">
