--- a/components/tags-table.html
+++ b/components/tags-table.html
@@ -53,8 +53,13 @@
                     <td md-cell ng-click="editCell($event, tag, 'name')" ng-class="{'md-placeholder': !tag.name}">
                         {{tag.name || lang.insertName}}
                     </td>
-                    <td md-cell
-                        ng-class="{'md-placeholder': !tag.type_name}">{{tag.type_name || lang.insertType}}
+                    <td md-cell ng-class="{'md-placeholder': !tag.type_name}">
+                        <md-select ng-model="selectedType" ng-change="updateTagType(tag, selectedType)">
+                            <md-option><em>{{lang.nothing}}</em></md-option>
+                            <md-option ng-selected="{{tagType.id.toString() === tag.type_id.toString()}}" ng-repeat="tagType in tagTypes track by $index" ng-value="tagType.id">
+                                {{tagType.description}}
+                            </md-option>
+                        </md-select>
                     </td>
                     <td md-cell><img ng-src="{{tag.battery_status ? 'img/icons/battery_empty_24.png' : 'img/icons/battery_full_24.png'}}" alt="{{lang.batteryLevel}}" title="{{lang.batteryLevel}}"></td>
                     <td md-cell ng-show="isAdmin || isUserManager">
